# usdb

./: .dockerignore  .gitignore  AGENTS.md  README.md  README.zh.md
src/btc/balance-history/: Cargo.toml  build.rs
src/btc/balance-history-cli/: Cargo.toml
src/btc/balance-history-cli/src/: balance_history_service.rs  client.rs  cmd.rs  main.rs
src/btc/balance-history/scripts/: README.md  regtest_balance_oracle.py  regtest_deep_reorg_smoke.sh  regtest_history_balance_oracle.sh  regtest_lib.sh  regtest_loader_switch.sh  regtest_multi_input_same_block_queries.sh  regtest_multi_reorg_smoke.sh  regtest_reorg_smoke.sh  regtest_restart_hybrid_reorg_smoke.sh  regtest_restart_multi_reorg_smoke.sh  regtest_restart_reorg_smoke.sh  regtest_restart_same_block_aggregate_reorg.sh  regtest_rpc_semantics.sh  regtest_smoke.sh  regtest_snapshot_install_corrupt.sh  regtest_snapshot_install_downgrade.sh  regtest_snapshot_install_failure.sh  regtest_snapshot_install_repeat.sh  regtest_snapshot_install_retry.sh  regtest_snapshot_recovery.sh  regtest_snapshot_restart_recovery.sh  regtest_spend_graph_queries.sh  regtest_stable_lag_smoke.sh  regtest_undo_retention_reorg.sh  regtest_undo_retention_same_block_aggregate_reorg.sh  run_real_btc_tests.sh  run_regtest_suite.sh  summarize_real_btc_metrics.py
src/btc/balance-history/src/: balance.rs  bench.rs  btc.rs  config.rs  db.rs  indexer.rs  lib.rs  main.rs  output.rs  rpc.rs  runtime.rs  snapshot_provenance.rs  status.rs  tool.rs  types.rs  utxo.rs  web_server.rs
src/btc/balance-history/src/btc/: batch.rs  client.rs  file_indexer.rs  local_loader.rs  mod.rs  rpc.rs
src/btc/balance-history/src/cache/: balance.rs  block_file.rs  mod.rs  monitor.rs  utxo.rs
src/btc/balance-history/src/db/: address.rs  db.rs  helper.rs  mod.rs  schema.sql  snapshot.rs
src/btc/balance-history/tests/: fake_chain_sync.rs  library_exports.rs
src/btc/indexer/: Cargo.toml
src/btc/indexer/src/: config.rs  constants.rs  main.rs
src/btc/usdb-control-plane/: Cargo.toml
src/btc/usdb-control-plane/src/: config.rs  main.rs  models.rs  rpc_client.rs  server.rs
src/btc/usdb-indexer/: Cargo.toml
src/btc/usdb-indexer-cli/: Cargo.toml
src/btc/usdb-indexer-cli/src/: cmd.rs  main.rs  usdb_indexer_service.rs
src/btc/usdb-indexer/scripts/: compare_world_sim_reports.py  regtest_e2e_smoke.sh  regtest_live_ord_e2e.sh  regtest_live_ord_historical_validation_floor_restart.sh  regtest_live_ord_historical_validation_history_not_available.sh  regtest_live_ord_historical_validation_reorg.sh  regtest_live_ord_multi_block_reorg.sh  regtest_live_ord_reorg_transfer_remint.sh  regtest_live_ord_same_height_reorg_transfer_remint.sh  regtest_live_ord_validator_block_body_api_version_mismatch.sh  regtest_live_ord_validator_block_body_candidate_set_crash_recovery.sh  regtest_live_ord_validator_block_body_candidate_set_protocol_version_mismatch.sh  regtest_live_ord_validator_block_body_candidate_set_semantics_version_mismatch.sh  regtest_live_ord_validator_block_body_competing_payloads.sh  regtest_live_ord_validator_block_body_e2e.sh  regtest_live_ord_validator_block_body_five_pass_candidate_set_reorg.sh  regtest_live_ord_validator_block_body_five_pass_candidate_set_tamper.sh  regtest_live_ord_validator_block_body_not_ready_window.sh  regtest_live_ord_validator_block_body_payload_version_upgrade.sh  regtest_live_ord_validator_block_body_payload_version_upgrade_reorg.sh  regtest_live_ord_validator_block_body_payload_version_upgrade_restart.sh  regtest_live_ord_validator_block_body_protocol_version_mismatch.sh  regtest_live_ord_validator_block_body_reorg.sh  regtest_live_ord_validator_block_body_restart_consistency.sh  regtest_live_ord_validator_block_body_retention.sh  regtest_live_ord_validator_block_body_semantics_version_mismatch.sh  regtest_live_ord_validator_block_body_state_advance.sh  regtest_live_ord_validator_block_body_three_pass_candidate_set.sh  regtest_live_ord_validator_block_body_two_pass_competing_payloads.sh  regtest_live_ord_validator_block_body_two_pass_competition.sh  regtest_live_ord_validator_block_body_two_pass_energy_advantage.sh  regtest_live_ord_validator_block_body_two_pass_reorg.sh  regtest_live_ord_validator_block_body_two_pass_tamper.sh  regtest_live_ord_validator_block_body_version_matrix.sh  regtest_live_ord_validator_historical_context_e2e.sh  regtest_pending_recovery_energy_failure.sh  regtest_pending_recovery_transfer_reload_restart.sh  regtest_reorg_lib.sh  regtest_reorg_smoke.sh  regtest_restart_hybrid_reorg_smoke.sh  (+19 more)
src/btc/usdb-indexer/src/: config.rs  constants.rs  main.rs  output.rs  status.rs
src/btc/usdb-util/: Cargo.toml
src/btc/usdb-util/src/: config.rs  constants.rs  dirs.rs  hash.rs  lib.rs  lock.rs  log_util.rs  mem.rs  types.rs
(+400 files in other folders)
