[package]
name = "balance-history-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
serde = "1.0"
usdb-util = { path = "../usdb-util" }
tokio = { version = "*", features = ["full"] }
indicatif = "0.18"
clap = { version = "4.5", features = ["derive"] }
bitcoincore-rpc = "0.19"
balance-history = { path = "../balance-history" }