[package]
name = "balance-history"
version = "0.1.0"
edition = "2024"

[dependencies]
usdb-util = { path = "../usdb-util" }
rust-rocksdb = "0.44"
tokio = { version = "*", features = ["full"] }
bitcoincore-rpc = "0.19"
log = "*"
serde = "1.0"
serde_json = "1.0"
dirs = "6.0"
moka = { version = "0.12", features = ["sync"] }
indicatif = "0.18"
toml = "0.9"
clap = { version = "4.5", features = ["derive"] }
daemonize = "0.5"