[package]
name = "indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
usdb-util = { path = "../usdb-util" }
tokio = { version = "*", features = ["full"] }
bitcoincore-rpc = "0.19"
ord = "0.24"
electrum-client = "0.24"
ordinals = "*"
lru = "*" 
serde_json = "*" 
log = "*"
reqwest = "*"
dirs = "*"
serde = "*"
rusqlite = { version = "*", features = ["bundled"] }
named-lock = "0.4"