[package]
name = "usdb-control-plane"
version = "0.1.0"
edition = "2024"

[dependencies]
usdb-util = { path = "../usdb-util" }
axum = "0.8"
bitcoincore-rpc = "0.19"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["full"] }
toml = "0.9"
tower-http = { version = "0.6", features = ["fs"] }
