[package]
name = "usdb-indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
usdb-util = { path = "../usdb-util" }
tokio = { version = "1.49", features = ["full"] }
bitcoincore-rpc = "0.19"
ord = "0.24"
ordinals = "*"
lru = "*" 
serde_json = "1.0" 
log = "0.4"
reqwest = "0.13"
dirs = "*"
serde = "*"
rusqlite = { version = "0.38", features = ["bundled"] }
named-lock = "0.4"