[package]
name = "usdb-indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
usdb-util = { path = "../usdb-util" }
rust-rocksdb = "0.45"
tokio = { version = "1.49", features = ["full"] }
bitcoincore-rpc = "0.19"
ord = "0.24"
ordinals = "*"
lru = "0.16" 
serde_json = "1.0" 
log = "0.4"
reqwest = { version = "0.13", features = ["json"] }
dirs = "*"
serde = "*"
rusqlite = { version = "0.38", features = ["bundled"] }
named-lock = "0.4"
balance-history = { path = "../balance-history" }
bincode = { version = "2.0", features = ["serde"] }