[package]
name = "usdb-util"
version = "0.1.0"
edition = "2024"

[dependencies]
flexi_logger = "0.31"
log = "0.4"
named-lock = "0.4"
dirs = "6.0"
bitcoincore-rpc = "0.19"
serde = "1.0"
serde_json = "1.0"
electrum-client = "0.24"
tokio = { version = "1.48", features = ["full"] }
is-docker = "0.2"
sysinfo = "0.37"